Initial attempt to use RADIUS tunneled Authentik (not working yet)

--- a/freeradius/radiusd.conf
+++ b/freeradius/radiusd.conf
@@ -22,9 +22,8 @@ max_requests = 16384
 hostname_lookups = no
 
 log {
-	destination = files
+	destination = stdout
 	colourise = yes
-	file = ${logdir}/radius.log
 	syslog_facility = daemon
 	stripped_names = no
 	auth = no
@@ -44,6 +43,33 @@ security {
 }
 
 proxy_requests = no
+#proxy_requests = yes
+#
+#proxy server {
+#    default_fallback = no
+#    dynamic = yes
+#}
+#
+#home_server authentik_radius {
+#    type = auth
+#    ipaddr = authentik_radius
+#    port = 1812
+#    secret = "[REDACTED]"
+#    response_window = 20
+#    zombie_period = 40
+#    require_message_authenticator = no
+#}
+#
+#home_server_pool authentik {
+#    type = fail-over
+#    home_server = authentik_radius
+#}
+#
+#realm authentik {
+#    nostrip
+#    auth_pool = authentik
+#}
+
 
 $INCLUDE clients.conf
 
